# ios-agent-template

./: .gitignore  AGENTS.md  README.md
.github/workflows/: ios-smoke.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py  sessions.py  streaming.py
backend/app/agents/: __init__.py  builder.py  catalog.py  definitions.py  extensions.py  service.py
backend/app/api/: routes_chat.py
backend/app/core/: config.py
backend/app/schemas/: chat.py
backend/config/agents/: default.yaml  planner.yaml  researcher.yaml
backend/config/agents/examples/: hosted-mcp-tool.example.yaml  mcp-http.example.yaml
backend/config/instructions/: default.md  planner.md  researcher.md
backend/scripts/: export_openapi.py  smoke_chat.py
backend/tests/: conftest.py  test_agent_catalog.py  test_chat_service.py
docs/: architecture.md  design-brief.md
ios/: Package.swift
ios/ChatAgent/: Info.plist
ios/ChatAgent.xcodeproj/: project.pbxproj
ios/ChatAgentTemplate/: Info.plist
ios/ChatAgentTemplate.xcodeproj/: project.pbxproj
ios/PackageSupport/: ChatAPIClientProtocol.swift
reviews/: backend-customization.md  chat-config-review.md  chat-ui-decision.md  ios-chat-client-decision.md  sqlite-sse-review.md
reviews/group-1/: autonomy-decision.md  project-brief-review.md  template-chat-backend.md
reviews/group-2/: change-queue.ndjson  exploration-ios--ChatAgent--App--AppEnvironment.swift.md  exploration-ios--ChatAgent--App--ChatAgentApp.swift.md  review-queue.ndjson  (+15 more)
shared/: chat-stream-contract.json  chat-stream-fixture.sse  openapi.json
(+19 files in other folders)
